# projects

./: .gitignore
hybrid_django/: .pre-commit-config.yaml  README.md  manage.py  package-lock.json  package.json  pyproject.toml  webpack.config.js
hybrid_django/assets/: index.js
hybrid_django/hybrid_django/: asgi.py  settings.py  urls.py  wsgi.py
hybrid_django/templates/: hello_webpack.html
